add: basic formatting

--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Curtis Thomas - Extra Question 1</h1>
-    <h2>Free choice extra assignment bundle E</h2>
-    
-</body>
-</html>
+# Curtis Thomas - Extra Question 1
+## Free choice extra assignment bundle E
+
+# A first-level heading
+## A second-level heading
+### A third-level heading
